--- a/AppDevFrameworkProject/pom.xml
+++ b/AppDevFrameworkProject/pom.xml
@@ -20,6 +20,7 @@
 			<groupId>easymock</groupId>
 			<artifactId>easymockclassextension</artifactId>
 			<version>2.2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
